--- a/.github/workflows/test-firesong.yml
+++ b/.github/workflows/test-firesong.yml
@@ -6,17 +6,19 @@ on:
 
 jobs:
   unittest_and_coverage:
+    runs-on: ubuntu-latest
+    name: Coverage tests
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Test with unittest
-      run: |
-        coverage run --source=. -m unittest discover tests/ -b
-        coverage report
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Test with unittest
+        run: |
+          coverage run --source=. -m unittest discover tests/ -b
+          coverage report
