added doc and test for branch

--- a/.github/workflows/test-firesong.yml
+++ b/.github/workflows/test-firesong.yml
@@ -5,6 +5,7 @@ on:
       - feature/pip-installable
       - base
       - update/update-cosmo
+      - blazar-powerlaw-alt
   pull_request:
     branches: [ base ]
 
